[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://assets/ball.png" type="Texture" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://ball.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 20 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 20 )

[sub_resource type="RectangleShape2D" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 850 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 850 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1500, 20 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1500, 20 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/FFFFORWA.TTF"

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = SubResource( 10 )

[node name="Node2D" type="Node2D"]

[node name="player1" type="StaticBody2D" parent="."]
position = Vector2( 100, 850 )
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="player1"]
scale = Vector2( 40, 40 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player1"]
scale = Vector2( 10, 10 )
shape = SubResource( 1 )

[node name="player2" type="StaticBody2D" parent="."]
position = Vector2( 2900, 850 )
script = ExtResource( 3 )

[node name="sprite" type="Sprite" parent="player2"]
scale = Vector2( 40, 40 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2"]
scale = Vector2( 10, 10 )
shape = SubResource( 8 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 1500, 850 )
script = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="Ball"]
scale = Vector2( 40, 40 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
scale = Vector2( 2, 2 )
shape = SubResource( 9 )

[node name="Wall1" type="StaticBody2D" parent="."]
position = Vector2( -10, 850 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
shape = SubResource( 4 )

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( 3010, 850 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource( 5 )

[node name="Wall3" type="StaticBody2D" parent="."]
position = Vector2( 1500, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall3"]
shape = SubResource( 6 )

[node name="Wall4" type="StaticBody2D" parent="."]
position = Vector2( 1500, 1710 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall4"]
shape = SubResource( 7 )

[node name="Control" type="Control" parent="."]
margin_left = -0.323975
margin_top = -0.323975
margin_right = 2985.68
margin_bottom = 1685.68
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player1_score" type="Label" parent="Control"]
margin_left = 30.0
margin_top = 30.0
margin_right = 38.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 11 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player2_score" type="Label" parent="Control"]
anchor_left = 100.0
anchor_top = 100.0
anchor_right = 100.0
anchor_bottom = 100.0
margin_left = -295670.0
margin_top = -168570.0
margin_right = -295662.0
margin_bottom = -168556.0
custom_fonts/font = SubResource( 11 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
